--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/Djay8400/employee-tracker-david-jay#readme",
   "dependencies": {
+    "console-table-printer": "^2.10.0",
     "console.table": "^0.10.0",
+    "dotenv": "^10.0.0",
     "inquirer": "^8.2.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.1"
+    "mysql2": "^2.3.1",
+    "sequelize": "^6.7.0"
   }
 }
